fix: add padding to avoid overlapping

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -365,3 +365,9 @@ p.legend {
 .content a:visited {
   color: #1A7970;
 }
+
+@media (min-width: 769px) {
+    p.list-group-item-text {
+        padding-right: 40px;
+    }
+}
